# discord-twitch-notif

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
src/: main.rs  webhook.rs  websocket.rs
