[package]
name = "discord-twitch-notif"
version = "0.1.0"
edition = "2021"
categories = []
description = ""
keywords = []
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ModProg/discord-twitch-notif"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
bonsaidb = { version = "0.5.0", features = ["local-full", "async"] }
clap = { version = "4.4.8", features = ["derive"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-deque"] }
futures = "0.3.29"
hyper = "0.14"
poise = "0.5.6"
rand = "0.8.5"
reqwest = "0.11.22"
retainer = "0.3.0"
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
twitch_api = { version = "0.7.0-rc.7", features = ["all", "reqwest"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '## \[Unreleased\]'
replace = """
<!-- ## [Unreleased] -->
## [{{version}}] - {{date}}\
"""
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '\[unreleased\]: (.*)/(v.*)\.\.\.HEAD'
replace = """
[unreleased]: $1/{{tag_name}}...HEAD
[{{version}}]: $1/$2...{{tag_name}}\
"""
